yamls/demo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-httproute
  namespace: default
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: default
  rules:
    - backendRefs:
        - name: demo
          port: 80
